<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/login_round_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/login_activity_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="30dp"
        android:background="#fff"
        card_view:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_activity_authorization"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_activity_user_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_activity_username"
                android:scrollbarSize="25dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_activity_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/login_activity_password"
                android:scrollbarSize="25dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/green"
                card_view:passwordToggleDrawable="@drawable/show_password_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_activity_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_activity_enter_button"
                    style="@style/default_button"
                    android:text="@string/login_activity_enter"
                    android:layout_centerInParent="true"
                    />
                <ProgressBar
                    android:id="@+id/login_activity_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/login_activity_enter_button"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    />
            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>